# Mania-Decomp-Mods

./: .gitignore  .gitmodules  BUILDING.md  README.md  add-gameapi-submodules.bat  add-gameapi-submodules.py
45DegreeRotation/: 45DegreeRotation.sln  CMakeLists.txt  README.md
45DegreeRotation/45DegreeRotation/: 45DegreeRotation.vcxproj  45DegreeRotation.vcxproj.filters  Player.h  dllmain.c
Act2ClearJingle/: Act2ClearJingle.sln  CMakeLists.txt  README.md
Act2ClearJingle/Act2ClearJingle/: Act2ClearJingle.vcxproj  Act2ClearJingle.vcxproj.filters  ActClear.h  Music.c  Music.h  Zone.c  Zone.h  dllmain.c
AlwaysDashAni/: AlwaysDashAni.sln  Android.mk  CMakeLists.txt  README.md
AlwaysDashAni/AlwaysDashAni/: AlwaysDashAni.vcxproj  AlwaysDashAni.vcxproj.filters  ModConfig.h  ModVersion.h  Player.c  Player.h  dllmain.c
AlwaysDashAni/AlwaysDashAni/Objects/: Camera.h  Player.c  Player.h
CDSpindash/: Android.mk  CDSpindash.sln  CMakeLists.txt  README.md
CDSpindash/CDSpindash/: CDSpindash.vcxproj  CDSpindash.vcxproj.filters  Misc.c  Misc.h  Player.c  Player.h  dllmain.c
DimTimerCustomizer/: Android.mk  CMakeLists.txt  DimTimerCustomizer.sln  README.md
DimTimerCustomizer/DimTimerCustomizer/: DimTimerCustomizer.vcxproj  DimTimerCustomizer.vcxproj.filters  ModConfig.h  ReplayRecorder.h  dllmain.c
DimTimerCustomizer/DimTimerCustomizer/Objects/: ReplayRecorder.h
DisableAutoSavePopup/: .gitignore  Android.mk  CMakeLists.txt  DisableAutoSavePopup.sln  README.md
DisableAutoSavePopup/DisableAutoSavePopup/: DisableAutoSavePopup.vcxproj  DisableAutoSavePopup.vcxproj.filters  ModConfig.h  UIUsernamePopup.h  UIWaitSpinner.h  dllmain.c
DropDashSDW/: CMakeLists.txt  DropDashSDW.sln  README.md
DropDashSDW/DropDashSDW/: DropDashSDW.vcxproj  DropDashSDW.vcxproj.filters  Player.h  SDashWheel.c  SDashWheel.h  dllmain.c
DunkeyLives/: Android.mk  CMakeLists.txt  DunkeyLives.sln  README.md
DunkeyLives/DunkeyLives/: DunkeyLives.vcxproj  DunkeyLives.vcxproj.filters  HandLauncher.h  Player.h  PullChain.c  PullChain.h  dllmain.c
GetRedSpheres/: CMakeLists.txt  GetRedSpheres.sln  README.md
GetRedSpheres/GetRedSpheres/: BSS_Collectable.c  BSS_Collectable.h  BSS_HUD.c  BSS_HUD.h  BSS_Message.c  BSS_Message.h  BSS_Setup.c  BSS_Setup.h  GetRedSpheres.vcxproj  GetRedSpheres.vcxproj.filters  ModConfig.h  dllmain.c
HealthMeter/: Android.mk  CMakeLists.txt  HealthMeter.sln  README.md
HealthMeter/HealthMeter/: HealthMeter.filters  HealthMeter.vcxproj  HealthMeter.vcxproj.filters  ModConfig.h  dllmain.c
HealthMeter/HealthMeter/Objects/: Competition.h  CompetitionSession.h  GameOver.h  HUD.c  HUD.h  ItemBox.c  ItemBox.h  LRZConvItem.h  Misc.c  Misc.h  Player.c  Player.h  Ring.c  Ring.h  TitleCard.c  TitleCard.h  Zone.c  Zone.h
MKItemBox/: Android.mk  CMakeLists.txt  MKItemBox.sln  README.md
MKItemBox/MKItemBox/: ItemBox.c  ItemBox.h  MKItemBox.filters  MKItemBox.vcxproj  MKItemBox.vcxproj.filters  Misc.h  Player.h  dllmain.c
MKItemBox/MKItemBox/Objects/: CompetitionSession.h  Debris.h  DebugMode.h  ItemBox.c  Player.h  Zone.h
ManiaObjectUnlocker/: CMakeLists.txt  ManiaObjectUnlocker.sln  README.md
ManiaObjectUnlocker/ManiaObjectUnlocker/: ManiaObjectUnlocker.vcxproj  Objects.cmake  Overloads.h  (+7 more)
MegAmisDevTools/: Android.mk  CMakeLists.txt  MegAmisDevTools.sln  README.md
MegAmisDevTools/MegAmisDevTools/: MegAmisDevTools.vcxproj  MegAmisDevTools.vcxproj.filters  ModConfig.h  dllmain.c
MegAmisDevTools/MegAmisDevTools/Objects/: DebugMode.c  MegAmiMenu.c  MegAmiMenu.h  Misc.h  Player.c  Player.h
MovesetTweaks/: CMakeLists.txt  MovesetTweaks.sln  README.md
NoBonusStages/: Android.mk  CMakeLists.txt  NoBonusStages.sln  README.md
NoBonusStages/NoBonusStages/: NoBonusStages.vcxproj  NoBonusStages.vcxproj.filters  StarPost.c  dllmain.c
NoBonusStages/NoBonusStages/Objects/: StarPost.h
NoSpecialCheat/: CMakeLists.txt  NoSpecialCheat.sln  README.md
OldSuperInput/: CMakeLists.txt  OldSuperInput.sln  README.md
OuttaHereRestored/: .gitignore  Android.mk  CMakeLists.txt  OuttaHereRestored.sln  README.md
OuttaHereRestored/OuttaHereRestored/: ModConfig.h  ModVersion.h  OuttaHereRestored.vcxproj  OuttaHereRestored.vcxproj.filters  Player.c  Player.h  dllmain.c
OuttaHereRestored/OuttaHereRestored/Objects/: Player.c  Player.h
PaletteRandomizer/: CMakeLists.txt  PaletteRandomizer.sln  README.md
PeeloutAllChar/: CMakeLists.txt  PeeloutAllChar.sln  README.md
PlusTitleFixes/: Android.mk  CMakeLists.txt  PlusTitleFixes.sln  README.md
PlusTitleFixes/PlusTitleFixes/: ModConfig.h  PlusTitleFixes.vcxproj  PlusTitleFixes.vcxproj.filters  TitleEggman.h  TitleLogo.h  TitleSetup.c  TitleSetup.h  dllmain.c
PlusTitleFixes/PlusTitleFixes/Objects/: TitleSetup.c
RetrySpecialStage/: CMakeLists.txt  README.md  RetrySpecialStage.sln
RollJumpLock/: Android.mk  CMakeLists.txt  README.md  RollJumpLock.sln
RollJumpLock/RollJumpLock/: Player.c  Player.h  RollJumpLock.vcxproj  RollJumpLock.vcxproj.filters  Shield.h  dllmain.c
RollJumpLock/RollJumpLock/Objects/: Player.c  Player.h  Shield.h
S2DebugPause/: Android.mk  CMakeLists.txt  README.md  S2DebugPause.sln
S2DebugPause/S2DebugPause/: DebugMode.c  DebugMode.h  Player.h  S2DebugPause.filters  S2DebugPause.vcxproj  S2DebugPause.vcxproj.filters  dllmain.c
S2DebugPause/S2DebugPause/Objects/: DebugMode.c  DebugMode.h  Player.h
SaveEditor/: CMakeLists.txt  README.md  SaveEditor.sln
ShieldControl/: Android.mk  CMakeLists.txt  README.md  ShieldControl.sln
ShieldControl/ShieldControl/: Misc.h  Player.c  Player.h  ShieldControl.vcxproj  ShieldControl.vcxproj.filters  dllmain.c
SonicDiesOfBleach/: Android.mk  CMakeLists.txt  README.md  SonicDiesOfBleach.sln
SonicDiesOfBleach/SonicDiesOfBleach/: Player.c  Player.h  SonicDiesOfBleach.vcxproj  SonicDiesOfBleach.vcxproj.filters  dllmain.c
SonicDiesOfBleach/SonicDiesOfBleach/Objects/: Player.h
SuperCancel/: .gitignore  CMakeLists.txt  README.md  SuperCancel.sln
SuperCancel/SuperCancel/: HUD.c  HUD.h  Player.c  Player.h  SuperCancel.vcxproj  SuperCancel.vcxproj.filters  dllmain.c
(+327 files in other folders)
